Group17RobotReal/Group17Robot.cydsn/BUILD.log
--------------- Build Started: 10/23/2019 10:51:15 Project: Group17Robot, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/navigation.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c navigation.c -o .\CortexM3\ARM_GCC_541\Debug\navigation.o
navigation.c: In function 'failsafeSideSensors':
navigation.c:502:9: warning: variable 'translate_direction' set but not used [-Wunused-but-set-variable]
     int translate_direction;
         ^
navigation.c: In function 'straightAdjust':
navigation.c:534:9: warning: unused variable 'timer' [-Wunused-variable]
     int timer;
         ^
navigation.c: In function 'straightAdjustBlayke':
navigation.c:685:9: warning: unused variable 'max_difference' [-Wunused-variable]
     int max_difference = 800;
         ^
navigation.c: In function 'straightAdjustBack':
navigation.c:775:9: warning: variable 'minimum_distance' set but not used [-Wunused-but-set-variable]
     int minimum_distance;                           
         ^
navigation.c: In function 'failsafe':
navigation.c:497:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
navigation.c: In function 'moveUntil':
navigation.c:219:15: warning: 'distance_sensor' may be used uninitialized in this function [-Wmaybe-uninitialized]
         while (distance_sensor < abs(distance_set) && emergency_exit == FALSE) {               // This adjusts for drift 
               ^
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/motor.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c motor.c -o .\CortexM3\ARM_GCC_541\Debug\motor.o
motor.c: In function 'moveDynamic':
motor.c:90:39: error: 'adjsut' undeclared (first use in this function)
                 speed_right = speed + adjsut;
                                       ^
motor.c:90:39: note: each undeclared identifier is reported only once for each function it appears in
motor.c:38:9: warning: unused variable 'count_difference' [-Wunused-variable]
     int count_difference;      //count_left - count_right
         ^
motor.c: In function 'rampUpDown':
motor.c:252:9: warning: unused variable 'old_speed' [-Wunused-variable]
     int old_speed;
         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 10/23/2019 10:51:17 ---------------
